Fix off-center contents in IE

--- a/paper-item-shared.css
+++ b/paper-item-shared.css
@@ -11,6 +11,7 @@
 :host {
   display: block;
   min-height: 48px;
+  height: 48px;
   padding: 0px 16px;
 }
 
